# langfarm

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SUPPORT.md  package-lock.json  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug_report.yml  2-feature_request.yml  4-question.yml  config.yml
.github/workflows/: docker-image.yml  docs-deploy.yml  dry-run-build-docker-image.yml  pr-check.yml
apps/langfarm-tracing/: .env.template  README.md  entrypoint.sh  pyproject.toml
apps/langfarm-tracing/src/langfarm_tracing/: config.py  kafka.py  main.py  tools.py
apps/langfarm-tracing/src/langfarm_tracing/api/routes/: ingestion.py
apps/langfarm-tracing/src/langfarm_tracing/langfuse/: events.py
apps/langfarm-tracing/src/langfarm_tracing/langfuse/events_schema/: observations-schema.json  traces-schema.json
apps/langfarm-tracing/tests/: .env.test  container_for_test.py  kafka_for_test.py  test_events_dispose.py  test_ingestion.py  test_kafka.py  test_tools.py  test_tracing_config.py
apps/langfarm-tracing/tests/mock-data/: trace-01-part1.json  trace-01-part2.json  trace-02-part1.json  trace-02-part2.json
docker/: .env.docker  .env.docker.langfuse  docker-compose-build.yml  docker-compose-deps.yml  docker-compose-flink-sql-client.yml  docker-compose-infra-ui.yml  docker-compose-paimon-flink.yml  docker-compose.yml
docker/streaming/: kafka-observations-to-paimon.sh  submit-tracing-to-paimon-task.sh
docker/streaming/sql/: create-catalog-in-local-paimon.sql
docs/: CONTRIBUTING.md  index.md  quick-start.md
docs/.vitepress/: config.mts  site-meta.mts  theme-config.mts
docs/.vitepress/theme/: Layout.vue  index.ts  style.css
docs/en/: CONTRIBUTING.md  index.md  quick-start.md
docs/en/streaming/: quick-start.md
docs/streaming/: quick-start.md
scripts/: build-local-docker.sh  create-sub-project.sh  init-postgres-docker-data.sh  into-flink-sql-cli.sh  post-event-data.sh  start-docker-compose-build.sh  start-docker-compose-deps.sh  start-docker-compose-infra-ui.sh  submit-tracing-to-paimon-task.sh
templates/new-package/: cookiecutter.json
templates/new-package/hooks/: post_gen_project.py
templates/new-package/{{cookiecutter.package_name}}/: pyproject.toml
tests/: .env.test  logging.yaml  test_poe_env.py
