[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.package_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
# "langfarm-xxx"
]

[dependency-groups]
dev = []

[tool.uv.sources]
#langfarm-xxx = { workspace = true }

[tool.ruff]
extend = "../../pyproject.toml"
include = ["src/**", "tests/*.py"]

[tool.pyright]
extends = "../../pyproject.toml"
include = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=html"
minversion = "6.0"
testpaths = ["tests"]
